--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ pandas = "^2.1.1"
 numpy = "^1.26.0"
 scikit-learn = "^1.3.1"
 joblib = "^1.3.2"
+dvc = "^3.27.0"
+hydra-core = "^1.3.2"
 
 
 [build-system]
