--- a/outputs/2023-10-20/23-46-03/.hydra/config.yaml
+++ b/outputs/2023-10-20/23-46-03/.hydra/config.yaml
@@ -1,14 +1,12 @@
 data:
   name: iris
   path: /data
-
 model:
   name: iris_classifier
   penalty: l2
-  tol: 1e-4
+  tol: 0.0001
   C: 1.0
-  fit_intercept: True
+  fit_intercept: true
   max_iter: 500
-
 infer:
   save_file: predictions.csv
