--- a/iris_classifier/conf/config.yaml
+++ b/iris_classifier/conf/config.yaml
@@ -3,12 +3,19 @@ data:
   path: /data
 
 model:
-  name: iris_classifier
-  penalty: l2
+  penalty: elasticnet
   tol: 1e-4
-  C: 1.0
-  fit_intercept: True
+  C: 0.4
+  fit_intercept: False
   max_iter: 500
+  solver: saga
+  l1_ratio: 0.3
+
+train:
+  name: iris_classifier
+  mlflow_server: http://127.0.0.1:8080
+  experiment_name: Iric_Classification
 
 infer:
   save_file: predictions.csv
+  mlflow_server: http://127.0.0.1:5000
