--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,17 @@ scikit-learn = "^1.3.1"
 joblib = "^1.3.2"
 dvc = "^3.27.0"
 hydra-core = "^1.3.2"
+onnx = "^1.15.0"
+onnxruntime = "^1.16.3"
+mlflow = "^2.8.1"
+skl2onnx = "^1.15.0"
+matplotlib = "^3.8.2"
 
+[tool.isort]
+src_paths = ["iris_classifier"]
+profile = "black"
+line_length = 90
+lines_after_imports = 2
 
 [build-system]
 requires = ["poetry-core"]
